chore: Update Dockerfile to include client directory and specify memory parameters for running nacional_server.jar